# monorepo

backend/src/: app.ts
backend/src/models/: deal.ts  dealStore.ts  listing.ts  listingStore.ts
backend/src/routes/: admin.ts  health.ts  kyc.ts  tenantRatingCard.ts
backend/src/schemas/: deal.ts  env.ts  listing.ts
backend/src/services/: conversionProvider.ts  latePaymentEscalationService.ts  ngnTopupInitiateService.ts  pricingService.ts
backend/src/utils/: auditLogger.ts
contracts/: Cargo.toml
contracts/deal_escrow/: Cargo.toml
contracts/integration_tests/: Cargo.toml
contracts/integration_tests/src/: lib.rs
contracts/oracle_price_feeds/src/: lib.rs
contracts/rent_payments/: Cargo.toml
contracts/rent_wallet/: Cargo.toml
contracts/tenant_reputation/src/: lib.rs
frontend/app/calculator/: page.tsx
frontend/app/dashboard/tenant/lease/: page.tsx
frontend/app/dashboard/tenant/rating-card/: page.tsx
frontend/app/properties/: page.tsx
frontend/contexts/: WalletContext.tsx
frontend/lib/: propertiesApi.ts
